--- a/ue/test/common/CMakeLists.txt
+++ b/ue/test/common/CMakeLists.txt
@@ -32,4 +32,4 @@ add_executable(log_filter_test log_filter_test.cc)
 target_link_libraries(log_filter_test srsue_common ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
 
 add_executable(timeout_test timeout_test.cc)
-target_link_libraries(timeout_test srsue_common ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
+target_link_libraries(timeout_test srsue_common ${CMAKE_THREAD_LIBS_INIT}  ${SRSLTE_LIBRARIES})
