link rf library at the binary

--- a/ue/test/upper/CMakeLists.txt
+++ b/ue/test/upper/CMakeLists.txt
@@ -25,6 +25,7 @@ target_link_libraries(ip_test srsue_upper
                               srsue_phy
                               srsue_radio
                               lte
+                              ${SRSLTE_LIBRARIES}
                               ${CMAKE_THREAD_LIBS_INIT}
                               ${Boost_LIBRARIES})
 
