--- a/ue/src/phy/CMakeLists.txt
+++ b/ue/src/phy/CMakeLists.txt
@@ -19,7 +19,7 @@
 
 file(GLOB SOURCES "*.cc")
 add_library(srsue_phy ${SOURCES})
-target_link_libraries(srsue_phy srsue_common ${SRSLTE_LIBRARIES})
+target_link_libraries(srsue_phy srsue_common ${SRSLTE_LIBRARY})
 
 if(ENABLE_GUI AND SRSGUI_FOUND)
     target_link_libraries(srsue_phy ${SRSGUI_LIBRARIES})
