set default rpath to off

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ include(SRSUEVersion) #sets version information
 # Options
 ########################################################################
 option(ENABLE_GUI "ENABLE_GUI" ON)
-option(RPATH      "RPATH" ON)
+option(RPATH      "RPATH" OFF)
 set(GCC_ARCH native CACHE STRING "GCC compile for specific architecture.")
 
 ########################################################################
